updated password-reset api end point

--- a/views/reset-password.ejs
+++ b/views/reset-password.ejs
@@ -75,7 +75,7 @@
       const password = formData.get("password");
 
       try {
-        const response = await axios.post("http://localhost:4000/password/reset-password",
+        const response = await axios.post("http://<%= PUBLIC_IP %>/api/password/reset-password",
           {
             reqId: token,
             password : password
@@ -85,7 +85,7 @@
 
         if (response.status === 200) {
           alert(response.data.message);
-          window.location.href = "http://localhost:5173/"; // Redirect to login page after success
+          window.location.href = "http://sharpener-project-react-s3.s3-website.ap-south-1.amazonaws.com/"; // Redirect to login page after success
         } else { 
           document.getElementById("errorMessage").textContent = response.data.message || "Failed to reset password.";
         }
